--- a/Win32Project1/Win32Project1.vcxproj
+++ b/Win32Project1/Win32Project1.vcxproj
@@ -150,6 +150,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI.h" />
+    <ClInclude Include="shape.h" />
+    <ClInclude Include="Widget.h" />
+    <ClInclude Include="Windows.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
