--- a/Win32Project1/Win32Project1.vcxproj
+++ b/Win32Project1/Win32Project1.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CallBack1.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="shape.h" />
     <ClInclude Include="Widget.h" />
