--- a/Win32Project1/Win32Project1.vcxproj.filters
+++ b/Win32Project1/Win32Project1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Windows.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="CallBack1.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
